--- a/src/index.css
+++ b/src/index.css
@@ -97,6 +97,15 @@ header h1 {
 	text-align: center;
 	margin-bottom: 2rem;
 }
+@media (max-width: 360px) {
+	.formulario label {
+		display: block;
+		color: var(--azul);
+		font-size: 2.2rem;
+		text-align: left;
+		margin-bottom: 2rem;
+	}
+}
 @media (max-width: 375px) {
 	.formulario label {
 		color: var(--azul);
@@ -124,6 +133,19 @@ header h1 {
 	border: none;
 	flex: 1;
 	font-size: 1.6rem;
+}
+@media (max-width: 360px) {
+	.formulario input[type='text'],
+	.formulario input[type='number'] {
+		background-color: var(--gris-claro);
+		border-radius: 1rem;
+		padding: 1rem;
+		border: none;
+		flex: 1;
+		margin: 10px -5px;
+		max-width: 75%;
+		font-size: 1.2rem;
+	}
 }
 @media (max-width: 375px) {
 	.formulario input[type='text'],
@@ -166,6 +188,12 @@ header h1 {
 	.formulario input[type='submit'] {
 		display: block;
 		padding: 1rem 5rem;
+	}
+}
+@media (max-width: 360px) {
+	.formulario input[type='submit'] {
+		border-radius: 6px;
+		margin: 10px 15px;
 	}
 }
 @media (max-width: 375px) {
@@ -492,6 +520,31 @@ body .modal {
 
 .modal label {
 	text-align: left;
+}
+@media (max-width: 360px) {
+	.modal label {
+		display: block;
+		text-align: center;
+	}
+	.modal input[type='text'],
+	.modal input[type='number'] {
+		width: 78%;
+		padding: 10px;
+		margin: 0 10px;
+		text-align: center;
+		font-size: 15px;
+	}
+	.modal select {
+		max-width: 79%;
+		margin: 0 25px;
+	}
+	.modal input[type='submit'] {
+		display: block;
+		align-items: center;
+		max-width: 79%;
+		margin: 40px 22px;
+		text-align: center;
+	}
 }
 @media (max-width: 375px) {
 	.modal label {
